# network-guardian

./: .gitignore  00_START_HERE_PUSH.md  BUILD_SUCCESS.md  BUILD_TOOLS_SETUP.md  COMPLETION_SUMMARY.md  Cargo.toml  FINAL_SUMMARY.md  GITHUB_PUSH_GUIDE.md  LAUNCH_CHECKLIST.md  LICENSE  PHASE_2_FINAL_REPORT.md  PHASE_2_SUMMARY.md  PHASE_2_TEST_RESULTS.md  PUSH_NOW.txt  QUICK_REFERENCE.md  README.md  SOCIAL_MEDIA_POSTS.md  build.rs  threats.db
docs/: index.html
src/: daemon.rs  main.rs  models.rs  network_monitor.rs  notifications.rs  packet_capture.rs  threat_database.rs  threat_detection.rs  ui.rs  utils.rs
