[package]
name = "network-guardian"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
parking_lot = "0.12"
crossbeam = "0.8"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
futures = "0.3"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }

# Phase 2: Packet Capture & Storage
# pcap requires Npcap on Windows - make it optional
pcap = { version = "1.1", optional = true }
rusqlite = { version = "0.30", features = ["bundled"] }

# Phase 2: Notifications
notify-rust = "4.10"

# Phase 2: Dashboard (optional - can be added later)
# egui = "0.27"
# egui-wgpu = "0.27"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = ["Win32_NetworkManagement_IpHelper", "Win32_Foundation", "Win32_System_Com"] }

[[bin]]
name = "network_guardian"
path = "src/main.rs"

[features]
# Enable packet capture (requires Npcap on Windows or libpcap-dev on Linux)
packet-capture = ["pcap"]
